--- a/Frontend/src/app/view/business-account/ba-manage/ba-manage-item-view/ba-manage-item-view.component.css
+++ b/Frontend/src/app/view/business-account/ba-manage/ba-manage-item-view/ba-manage-item-view.component.css
@@ -5,7 +5,7 @@ ngb-carousel .picsum-img-wrapper > img {
   right: 0;
 }
 
-.carousel-inner img {
+/*.carousel-inner img {*/
 
-  max-height: 350px;
-}
+  /*max-height: 350px;*/
+/*}*/
