--- a/Frontend/src/app/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
+++ b/Frontend/src/app/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
@@ -391,7 +391,7 @@
               class="d-table badge bg-info">{{itemPackageE.name}}</span></div>
 
             <div class="card-footer border-0 pt-5 pb-4 gy-3 w-100 position-absolute bottom-0 end-0">
-              <div class="d-sm-flex justify-content-between align-items-end pt-5 mt-2 mt-sm-5">
+              <div class="d-sm-flex justify-content-between align-items-end">
                 <a class="text-decoration-none text-light pe-2">
                   <!-- <div class="fs-sm text-uppercase pt-2 mb-1">Available</div> -->
                   <h3 class="h5 text-light mb-1">{{itemPackageE.name}}</h3>
@@ -430,10 +430,15 @@
             </div>
             <div style="height: 350px; background-size: cover;">
               <!--<div class="tns-carousel-inner" style="height: 350px; background-size: cover;">-->
-              <img [src]="getPackageImageSrc(itemPackageE.itemPackageImgs[0])" style="margin: 3px;height: 350px">
+              <!--<img [src]="getPackageImageSrc(itemPackageE.itemPackageImgs[0])" style="margin: 3px;height: 350px">-->
               <!--<img src="../../../../assets/img/catalog/02.jpg" alt="Image" style="height: 350px;">-->
               <!--<img src="../../../../assets/img/catalog/07.jpg" alt="Image" style="height: 350px;">-->
-
+              <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
+                <mdb-carousel-item *ngFor="let image of itemPackageE.itemPackageImgs">
+                  <span style="height: 100%;width: 100%;background-color: rgba(0,0,0,0.36);position: absolute"></span>
+                  <img style="max-height:350px;height: 350px" class="d-block w-100" [src]="getPackageImageSrc(image)" alt="First slide">
+                </mdb-carousel-item>
+              </mdb-carousel>
             </div>
           </div>
 
