--- a/Frontend/src/app/shop-profile/view/business-account/business-account.component.html
+++ b/Frontend/src/app/shop-profile/view/business-account/business-account.component.html
@@ -29,7 +29,7 @@
         >
           <img
             class="rounded-circle"
-            src="../../../assets/img/37.png"
+            src="../../../../assets/img/37.png"
             width="48"
             alt="Annette Black"
           />
