--- a/Frontend/src/app/view/header/header.component.html
+++ b/Frontend/src/app/view/header/header.component.html
@@ -39,11 +39,12 @@
     <div class="collapse navbar-collapse order-lg-2" id="navbarNav">
       <ul class="navbar-nav navbar-nav-scroll" style="max-height: 35rem">
         <li class="nav-item d-lg-none">
-          <a class="nav-link" href="#signin-modal" data-bs-toggle="modal"
+          <a class="nav-link" data-bs-toggle="modal"
           ><i class="fas fa-user me-2"></i>Sign in</a
           >
         </li>
       </ul>
+      <!--<button [routerLink]="'/customer'">Login</button>-->
     </div>
   </div>
 </header>
