--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-edit/ba-manage-package-edit.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-edit/ba-manage-package-edit.component.html
@@ -3,7 +3,7 @@
   <div class="accordion" id="package-list">
 
     <!-- Accordion item -->
-    <div class="accordion-item mb-2" *ngFor="let itemPackageE of itemPackages;let i = index"
+    <div class="accordion-item mb-2" *ngFor="let itemPackage of itemPackages;let i = index"
          [ngStyle]="{'margin-top':i>0 ? '30px':'0px'}">
       <div class="accordion-header" id="">
         <div class="card bg-position-center border-0 overflow-hidden"
@@ -14,31 +14,31 @@
             <!-- <a class="img-overlay" href="#"></a> -->
             <span class="img-gradient-overlay"></span>
             <div class="position-absolute start-0 top-0 pt-3 ps-3"><span
-              class="d-table badge bg-info">{{itemPackageE.name}}</span></div>
+              class="d-table badge bg-info">{{itemPackage.name}}</span></div>
 
             <div class="card-footer border-0 pt-5 pb-4 gy-3 w-100 position-absolute bottom-0 end-0">
               <div class="d-sm-flex justify-content-between align-items-end">
                 <a class="text-decoration-none text-light pe-2">
                   <!-- <div class="fs-sm text-uppercase pt-2 mb-1">Available</div> -->
-                  <h3 class="h5 text-light mb-1">{{itemPackageE.name}}</h3>
+                  <h3 class="h5 text-light mb-1">{{itemPackage.name}}</h3>
                   <div class="fs-sm opacity-70">
                     <i class="fi-bookmark me-1"></i>
-                    {{itemPackageE.description}}
+                    {{itemPackage.description}}
                   </div>
                 </a>
                 <div class="btn-group ms-n2 ms-sm-5 mt-3 justify-content-end">
-                  <a class="btn btn-primary px-3">LKR {{itemPackageE.price}}</a>
+                  <a class="btn btn-primary px-3">LKR {{itemPackage.price}}</a>
                   <button
                     class="btnView btn btn-primary btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
                     type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#package' + i" aria-expanded="true"
-                    aria-controls="packageOne" value="{{itemPackageE.itemPackageId}}">
+                    aria-controls="packageOne" value="{{itemPackage.itemPackageId}}">
                     <i class="fi-eye-on"></i>
                   </button>
                   <button
                     class="btnEdit btn btn-primary btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
                     type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#packageEdit' + i"
                     aria-expanded="true"
-                    aria-controls="packageOneEdit" value="{{itemPackageE.itemPackageId}}">
+                    aria-controls="packageOneEdit" value="{{itemPackage.itemPackageId}}">
                     <i class="fi-edit"></i>
                   </button>
                   <!-- <button type="button" class="btn btn-primary btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm">
@@ -56,11 +56,11 @@
             </div>
             <div style="height: 350px; background-size: cover;">
               <!--<div class="tns-carousel-inner" style="height: 350px; background-size: cover;">-->
-              <!--<img [src]="getPackageImageSrc(itemPackageE.itemPackageImgs[0])" style="margin: 3px;height: 350px">-->
+              <!--<img [src]="getPackageImageSrc(itemPackage.itemPackageImgs[0])" style="margin: 3px;height: 350px">-->
               <!--<img src="../../../../assets/img/catalog/02.jpg" alt="Image" style="height: 350px;">-->
               <!--<img src="../../../../assets/img/catalog/07.jpg" alt="Image" style="height: 350px;">-->
               <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
-                <mdb-carousel-item *ngFor="let image of itemPackageE.itemPackageImgs">
+                <mdb-carousel-item *ngFor="let image of itemPackage.itemPackageImgs">
                   <span style="height: 100%;width: 100%;background-color: rgba(0,0,0,0.25);position: absolute"></span>
                   <img style="max-height:350px;height: 350px" class="d-block w-100" [src]="getPackageImageSrc(image)" alt="First slide">
                 </mdb-carousel-item>
@@ -92,7 +92,7 @@
            id="packageEdit{{i}}">
         <div class="card card-body">
           <form #baManageFormPackageE="ngForm"
-                (ngSubmit)="baManageFormPackageE.form.valid && onSubmitE(itemPackageE,imageInputE)" novalidate>
+                (ngSubmit)="baManageFormPackageE.form.valid && onSubmit(itemPackage,imageInput)" novalidate>
 
             <div class="row">
               <div class="col-md-8 mb-3">
@@ -108,7 +108,7 @@
                   type="text"
                   id="validationTooltipp1"
                   placeholder="Package name"
-                  [(ngModel)]="itemPackageE.name" #packageNameE="ngModel" name="packageName"
+                  [(ngModel)]="itemPackage.name" #packageNameE="ngModel" name="packageName"
                   required
                 />
                 <div *ngIf="(packageNameE.touched || baManageFormPackageE.submitted) && packageNameE.errors?.required"
@@ -131,7 +131,7 @@
                 <select
                   class="form-select"
                   id="validationTooltipp2"
-                  [(ngModel)]="itemPackageE.discountType" #discountTypeE="ngModel" name="discountType"
+                  [(ngModel)]="itemPackage.discountType" #discountTypeE="ngModel" name="discountType"
                 >
                   <option value="None">None</option>
                   <option value="Cash">Cash</option>
@@ -143,7 +143,7 @@
                 <!--</div>-->
                 <div class="valid-tooltip">Looks good!</div>
               </div>
-              <div class="col-md-4 mb-3" *ngIf="itemPackageE.discountType!=='None'">
+              <div class="col-md-4 mb-3" *ngIf="itemPackage.discountType!=='None'">
                 <label class="form-label" for="validationTooltipp3"
                 >Discount</label
                 >
@@ -158,7 +158,7 @@
                   type="number"
                   id="validationTooltipp3"
                   placeholder="Discount"
-                  [(ngModel)]="itemPackageE.discount" #discountE="ngModel" name="discount"
+                  [(ngModel)]="itemPackage.discount" #discountE="ngModel" name="discount"
                   required
                 />
                 <div *ngIf="(discountE.touched || baManageFormPackageE.submitted) && discountE.errors?.required"
@@ -186,7 +186,7 @@
                 <div class="input-group">
                   <span class="input-group-text fs-lg py-1">LKR</span>
                   <input type="number" class="form-control" id="validationTooltipp3" placeholder="Amount" required
-                         [(ngModel)]="itemPackageE.price" #priceE="ngModel" name="price">
+                         [(ngModel)]="itemPackage.price" #priceE="ngModel" name="price">
                   <!--<span class="input-group-text">.00</span>-->
                   <!--<div class="invalid-tooltip">-->
                   <!--Please enter itemPackage price-->
@@ -220,8 +220,8 @@
                   [searchWhileComposing]="true"
                   name="businessProfileCategories"
                   #businessProfileCategoriesE="ngModel" required
-                  (change)="getItems('e',itemPackageE)"
-                  [(ngModel)]="itemPackageE.businessProfileCategory.businessCategory">
+                  (change)="getItems(itemPackage);getItemPackageFeatures(itemPackage)"
+                  [(ngModel)]="itemPackage.businessProfileCategory.businessCategory">
                 </ng-select>
                 <div
                   *ngIf="(businessProfileCategoriesE.touched || baManageFormPackageE.submitted) && businessProfileCategoriesE.errors?.required"
@@ -265,12 +265,12 @@
                         [searchWhileComposing]="true"
                         name="items"
                         #itemsE="ngModel" required
-                        [(ngModel)]="itemPackageE.itemItemPackages"
+                        [(ngModel)]="itemPackage.itemItemPackages"
                         style="width: 100%">
                       </ng-select>
                     </div>
                     <div
-                      *ngIf="(baManageFormPackageE.submitted) && itemPackageE.itemItemPackages.length===0"
+                      *ngIf="(baManageFormPackageE.submitted) && itemPackage.itemItemPackages.length===0"
                       class="validErr">
                       Item is required
                     </div>
@@ -293,7 +293,7 @@
             </div>
             <!--<div class="row">-->
             <!--<div class="d-flex flex-wrap mb-4">-->
-            <!--<span *ngFor="let itemPackage of itemPackageE.itemItemPackages;let i = index"-->
+            <!--<span *ngFor="let itemPackage of itemPackage.itemItemPackages;let i = index"-->
             <!--class="bg-success text-light fs-sm btn btn-xs opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1">{{itemPackage.item.name}}-->
             <!--<i class="fi-x fs-xs ms-2" (click)="itemPackage.itemItemPackages.splice(i,1)"-->
             <!--style="cursor: pointer"></i>-->
@@ -311,20 +311,20 @@
                    aria-label="You can add if there any features"><i class="fi-help"></i>
                 </a>
                 <a href="#new-packageFeature-edit" data-bs-toggle="modal" data-bs-dismiss="modal"
-                   class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-3 fw-bold"
+                   class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-3 fw-bold createFeature"
                    title="You can create new feature." data-bs-original-title="You can create new feature."
-                   aria-label="You can create new feature." style="padding-left: 20px;padding-top: 4px">Create Feature
+                   aria-label="You can create new feature." style="padding-left: 20px;padding-top: 4px" value="{{i}}">Create Feature
                 </a>
 
                 <form #baManageFormPackageExs="ngForm"
-                      (ngSubmit)="baManageFormPackageExs.form.valid && addFeature()"
+                      (ngSubmit)="baManageFormPackageExs.form.valid && addFeature(itemPackage)"
                       novalidate>
 
                   <div class="d-flex flex-column flex-sm-row">
                     <div style="width: 100%">
                       <div>
                         <ng-select
-                          [items]="itemPackageItemPackageFeatures"
+                          [items]="itemPackageFeatures"
                           bindLabel="name"
                           placeholder="Select Feature"
                           dropdownPosition="auto"
@@ -332,7 +332,7 @@
                           [searchWhileComposing]="true"
                           name="iFeature"
                           #iFeature="ngModel" required
-                          [(ngModel)]="itemPackageItemPackageFeature"
+                          [(ngModel)]="itemPackage.itemPackageItemPackageFeature"
                           style="width: 100%">
                         </ng-select>
                       </div>
@@ -360,9 +360,9 @@
             </div>
             <div class="row">
               <div class="d-flex flex-wrap mb-4">
-                <span *ngFor="let itemPackageFeature of itemPackageE.itemPackageItemPackageFeatures;let i = index"
-                      class="bg-success text-light fs-sm btn btn-xs opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1">{{itemPackageFeature.itemFeature.name}}
-                  <i class="fi-x fs-xs ms-2" (click)="itemPackageE.itemPackageItemPackageFeatures.splice(i,1)" style="cursor: pointer"></i>
+                <span *ngFor="let itemPackageFeature of itemPackage.itemPackageItemPackageFeatures;let j = index"
+                      class="bg-success text-light fs-sm btn btn-xs opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1">{{itemPackageFeature.itemPackageFeature.name}}
+                  <i class="fi-x fs-xs ms-2" (click)="itemPackage.itemPackageItemPackageFeatures.splice(i,1)" style="cursor: pointer"></i>
                 </span>
               </div>
             </div>
@@ -377,7 +377,7 @@
                    aria-label="Small description about your package."><i class="fi-help"></i>
                 </a>
                 <textarea class="form-control" id="validationTooltipp5" rows="5" placeholder="Description"
-                          [(ngModel)]="itemPackageE.description" name="description"></textarea>
+                          [(ngModel)]="itemPackage.description" name="description"></textarea>
                 <div class="invalid-tooltip">
                   Please write something about your package
                 </div>
@@ -398,28 +398,28 @@
                 <!--(change)="processFile($event)" required>-->
                 <file-pond
                   class="file-uploader-grid"
-                  #imageInputE
+                  #imageInput
                   [options]="pondOptions"
                   name="imageInput"
-                  (onaddfile)="pondHandleAddFile($event,'e',itemPackageE)"
-                  (onremovefile)="pondHandlerRemoveFile($event,'e',itemPackageE)">
+                  (onaddfile)="pondHandleAddFile($event,'e',itemPackage)"
+                  (onremovefile)="pondHandlerRemoveFile($event,'e',itemPackage)">
                 </file-pond>
                 <!--<input class="file-uploader file-uploader-grid" type="file" multiple data-max-file-size="10MB"-->
                 <!--accept="image/png, image/jpeg"-->
                 <!--data-label-idle="&lt;div class=&quot;btn btn-primary mb-3&quot;&gt;&lt;i class=&quot;fi-cloud-upload me-1&quot;&gt;&lt;/i&gt;Upload photos&lt;/div&gt;&lt;br&gt;or drag them in">-->
               </div>
               <div
-                *ngIf="(imageInputE.touched || baManageFormPackageE.submitted) && imageInputE.errors?.required"
+                *ngIf="(imageInput.touched || baManageFormPackageE.submitted) && imageInput.errors?.required"
                 class="validErr" style="margin-bottom: 10px">
                 Image is required
               </div>
-              <div class="col-md-4 mb-4" *ngFor='let itemImg of itemPackageE.itemPackageImgs;let j = index'>
+              <div class="col-md-4 mb-4" *ngFor='let itemImg of itemPackage.itemPackageImgs;let j = index'>
                 <div style="position: relative" class="delImgT">
                   <img [src]="getImageSrc(itemImg)" style="margin: 3px;height: 200px;width: 300px">
                   <span class="delImg">
                     <i class="fi-trash"
                        style="color: red;padding: 5px;background-color: white;border-radius: 10px;cursor: pointer;font-size: 25px;"
-                       (click)="itemPackageE.itemPackageImgs.splice(j,1)"></i>
+                       (click)="itemPackage.itemPackageImgs.splice(j,1)"></i>
                   </span>
                 </div>
               </div>
@@ -430,7 +430,7 @@
                   class="form-check-input"
                   type="checkbox"
                   id="invalidCheckP"
-                  [(ngModel)]="itemPackageE.isNewPackage"
+                  [(ngModel)]="itemPackage.isNewPackage"
                   name="newPackage"
                   required
                 />
@@ -442,7 +442,7 @@
                 </div>
               </div>
             </div>
-            <button class="btn btn-primary btn-md" type="submit" [disabled]="!itemPackageE.isNewPackage">
+            <button class="btn btn-primary btn-md" type="submit" [disabled]="!itemPackage.isNewPackage">
               Save
             </button>
           </form>
@@ -452,7 +452,7 @@
            id="package{{i}}" style="margin-top: 10px">
         <div class="accordion-body">
 
-          <app-ba-manage-item-view [items]="itemPackageE.items"></app-ba-manage-item-view>
+          <app-ba-manage-item-view [items]="itemPackage.items"></app-ba-manage-item-view>
 
         </div>
       </div>
@@ -480,8 +480,8 @@
           <i class="fi-alert-circle me-2 me-sm-3 lead"></i>
           <div>It takes few minutes to review your feature.Then we will add it into your item.</div>
         </div>
-        <form class="tab-pane fade show active" autocomplete="off" id="add-feature-e" #baManageFormItemFeature="ngForm"
-              (ngSubmit)="baManageFormItemFeature.form.valid && addFeatureTemp()" novalidate>
+        <form class="tab-pane fade show active" autocomplete="off" id="add-feature-e" #baManageFormPackageFeature="ngForm"
+              (ngSubmit)="baManageFormPackageFeature.form.valid && addFeatureTemp()" novalidate>
           <div class="mb-3">
             <label class="form-label" for="feature">Feature</label>
             <div style="display: flex">
@@ -493,7 +493,7 @@
               </button>
             </div>
           </div>
-          <div *ngIf="(newFeatureE.touched || baManageFormItemFeature.submitted) && newFeatureE.errors?.required"
+          <div *ngIf="(newFeatureE.touched || baManageFormPackageFeature.submitted) && newFeatureE.errors?.required"
                class="validErr" style="margin-bottom: 10px">
             Item Feature is required
           </div>
