--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.css
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.css
@@ -14,27 +14,29 @@
   align-content: center;
 }
 
-.container {
+.gal-container {
   display: flex;
   flex-wrap: wrap;
 }
 
-.container img {
+.gal-container img {
   width: 23%;
-  height: 200px;
+  /* height: 200px; */
   object-fit: cover;
-  margin: 5px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .g-overlay {
   min-width: 320px;
 }
 
+/* .gallery-item{
+  height: 220px !important;
+} */
 
-img {
+
+/* img {
   width: 150px;
-}
+} */
 
 .lightbox-example, .gallerize-example {
   margin: 2em;
