--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.html
@@ -28,11 +28,11 @@
               <div class="row g-2 g-md-3 gallery">
 
                 <p class="container">
-                  <img 
-                  *ngFor="let image of _album; let i=index"
-                  [lightbox]="i"
-                  [gallery]="'anotherLightbox'"
-                  [src]="image.thumb" (click)="open(i)" />
+                  <img
+                    *ngFor="let image of _album; let i=index"
+                    [lightbox]="i"
+                    [gallery]="'anotherLightbox'"
+                    [src]="image.thumb" (click)="open(i)"/>
                 </p>
                 <!-- <div class="col" *ngFor="let itemImg of item.itemImgs">
                   <a class="gallery-item rounded-1 rounded-md-2" href="./asset/img/catalog/03.jpg"
@@ -363,8 +363,9 @@
               <!--<div class="col-md-4 mb-4" *ngFor='let url of imagesE'>-->
               <!--<img [src]="url" style="margin: 3px;height: 200px;width: 300px">-->
               <!--</div>-->
-              <div class="col-md-4 mb-4" *ngFor='let itemImg of item.itemImgs;let j = index'>
-                <div style="position: relative" class="delImgT">
+              <div class="col-md-6 mb-6" *ngFor='let itemImg of item.itemImgs;let j = index'>
+                <div style="position: relative;display: flex;justify-content: center;border: 1px solid #efefef;margin-bottom: 20px"
+                     class="delImgT">
                   <img [src]="getImageSrc(itemImg)" style="margin: 3px;height: 200px;width: 300px">
                   <span class="delImg">
                     <i class="fi-trash"
