--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.css
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.css
@@ -39,3 +39,8 @@ img {
 .lightbox-example, .gallerize-example {
   margin: 2em;
 }
+
+/*::ng-deep .filepond--wrapper {*/
+  /*width: 100%;*/
+  /*border-width: 1px;*/
+/*}*/
