--- a/Frontend/src/app/app-shop/view/business-account/ba-profile/ba-profile.component.css
+++ b/Frontend/src/app/app-shop/view/business-account/ba-profile/ba-profile.component.css
@@ -14,7 +14,12 @@
   align-content: center;
 }
 
-::ng-deep .filepond--wrapper {
-  width: 240px !important;
+::ng-deep .pro-img .filepond--wrapper {
+  width: 240px;
   border-width: 3px;
 }
+
+/*::ng-deep .filepond--wrapper {*/
+  /*width: 240px !important;*/
+  /*border-width: 3px;*/
+/*}*/
