--- a/Frontend/src/app/app-shop/view/business-account/ba-profile/ba-profile.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-profile/ba-profile.component.html
@@ -33,7 +33,7 @@
             <!--data-style-panel-layout="compact" data-image-preview-height="160" data-image-crop-aspect-ratio="1:1"-->
             <!--data-image-resize-target-width="200" data-image-resize-target-height="200">-->
             <file-pond
-              class="file-uploader-grid"
+              class="file-uploader-grid pro-img"
               #imageInput
               [options]="pondOptions"
               name="imageInput"
