--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-edit/ba-manage-package-edit.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-edit/ba-manage-package-edit.component.html
@@ -257,7 +257,7 @@
                   <div style="width: 100%">
                     <div>
                       <ng-select
-                        [items]="itemsToAddE"
+                        [items]="itemsToAdd"
                         bindLabel="name"
                         placeholder="Select Item"
                         dropdownPosition="auto"
