--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
@@ -422,7 +422,7 @@
       dropdownPosition="auto"
       [multiple]="false"
       [searchWhileComposing]="true"
-      (change)="getItemPackagesOrdered();getItems()"
+      (change)="getItemPackagesOrdered()"
       [(ngModel)]="businessProfileCategory">
     </ng-select>
     <!-- <div class="invalid-tooltip">
