--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.css
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.css
@@ -14,6 +14,23 @@
   align-content: center;
 }
 
+.col-info > div > div {
+  border-radius: 10px;
+  padding: 8px 15px 0px 15px;
+  display: flex
+}
+
+.col-info > div > div > div {
+  margin-left: 40px;
+  text-align: center;
+  line-height: 2;
+  width: 100%
+}
+
+.col-info > div > div > span {
+  line-height: 2;
+}
+
 .gal-container {
   display: flex;
   flex-wrap: wrap;
@@ -33,7 +50,6 @@
   height: 220px !important;
 } */
 
-
 /* img {
   width: 150px;
 } */
@@ -43,6 +59,6 @@
 }
 
 /*::ng-deep .filepond--wrapper {*/
-  /*width: 100%;*/
-  /*border-width: 1px;*/
+/*width: 100%;*/
+/*border-width: 1px;*/
 /*}*/
